# nanobind_gpu_example

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: FindMetalCPP.cmake
src/: CMakeLists.txt  nanobind_gpu_example_ext.cpp  nb_utils.h
src/cuda/: CMakeLists.txt  add.cpp  utils.h
src/cuda/kernels/: add.cu  free.cu  free.h  utils.cu
src/metal/: CMakeLists.txt  add.cpp  utils.cpp  utils.h
src/metal/kernels/: free.h
tests/: test_basic.py
